# wayland-ivi-extension

ivi-id-agent-modules/ivi-id-agent/: CMakeLists.txt
ivi-input-modules/ivi-input-controller/src/: ivi-input-controller.c
ivi-layermanagement-examples/simple-wayland-egl-app/: CMakeLists.txt
ivi-layermanagement-examples/simple-wayland-egl-app/include/: app_events.h  app_wayland_egl.h  app_window.h  utils.h
ivi-layermanagement-examples/simple-wayland-egl-app/src/: app_events.c  app_wayland_egl.c  app_window.c  main.c
weston-ivi-shell/: CMakeLists.txt
weston-ivi-shell/src/: ivi-controller.c
